--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   box-shadow: 0 8px 16px rgba(0,0,0,0.50);
 }
 
+a {
+  text-decoration: none;
+}
+
 h2 {
   text-align: center;
   margin-bottom: 20px;
